--- a/index.html
+++ b/index.html
@@ -1,192 +1,63 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="zh">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Web ADIF 日志查看 / 编辑器（静态版）</title>
-  <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
-  <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-  <script src="https://cdn.tailwindcss.com"></script>
+<meta charset="UTF-8">
+<title>ADIF 日志查看器（可编辑 + QRZ 校验）</title>
+<link rel="stylesheet" href="style.css">
 </head>
-<body class="bg-slate-50">
-  <div id="root"></div>
+<body>
 
-  <script type="text/babel">
-    const { useState, useRef } = React;
+<h1>ADIF 日志查看器（编辑 + QRZ 校验）</h1>
 
-    function AdifEditor() {
-      const [records, setRecords] = useState([]);
-      const [query, setQuery] = useState("");
-      const [fields, setFields] = useState([]);
-      const [selected, setSelected] = useState(null);
-      const fileRef = useRef(null);
+<!-- ADIF 导入 -->
+<div class="box">
+    <h3>1. 导入 ADIF 文件</h3>
+    <input type="file" id="adifFile" accept=".adi,.adif,text/plain">
+    <button id="exportAdif">导出 ADIF</button>
+</div>
 
-      function parseAdif(text) {
-        const headerIndex = text.toUpperCase().indexOf("<EOH>");
-        const body = headerIndex >= 0 ? text.slice(headerIndex + 5) : text;
-        const rawRecs = body.split(/<EOR>/i).map(r => r.trim()).filter(Boolean);
-        const recs = [];
-        const allFields = new Set();
+<!-- QRZ 登录 -->
+<div class="box">
+    <h3>2. QRZ 登录</h3>
+    <input id="qrzUser" placeholder="QRZ 用户名">
+    <input id="qrzPass" type="password" placeholder="QRZ 密码">
+    <button id="loginQRZ">登录 QRZ 服务</button>
+    <span id="qrzStatus"></span>
+</div>
 
-        rawRecs.forEach(raw => {
-          const obj = {};
-          const tagRe = /<([^:>\s]+)(?::(\d+))?(?:[^>]*)>([^<]*)/gi;
-          let m;
-          while ((m = tagRe.exec(raw)) !== null) {
-            const name = m[1].toUpperCase();
-            let val = m[3] || "";
-            val = val.trim();
-            obj[name] = val;
-            allFields.add(name);
-          }
-          if (Object.keys(obj).length > 0) recs.push(obj);
-        });
+<!-- 搜索与过滤 -->
+<div class="box">
+    <h3>3. 搜索和过滤</h3>
+    搜索：<input id="searchBox" placeholder="Call / Mode / Band / 日期">
+    &nbsp;&nbsp;
+    Band：
+    <select id="bandFilter">
+        <option value="">全部</option>
+    </select>
+    Mode：
+    <select id="modeFilter">
+        <option value="">全部</option>
+    </select>
+</div>
 
-        setFields(Array.from(allFields).sort());
-        setRecords(recs.map((r, i) => ({ __id: i + 1, ...r })));
-      }
+<!-- ADIF 表格 -->
+<div class="box">
+    <h3>4. ADIF 日志（双击可编辑）</h3>
+    <table id="logTable">
+        <thead>
+            <tr>
+                <th data-field="call">CALL ▲▼</th>
+                <th data-field="band">BAND ▲▼</th>
+                <th data-field="mode">MODE ▲▼</th>
+                <th data-field="qso_date">DATE ▲▼</th>
+                <th data-field="time_on">TIME ▲▼</th>
+                <th>RAW</th>
+            </tr>
+        </thead>
+        <tbody id="logTableBody"></tbody>
+    </table>
+</div>
 
-      function buildAdif(recs) {
-        let out = "<ADIF_VERS:3>3.1\n<PROGRAMID:12>WebAdifEdit\n<EOH>\n";
-        recs.forEach(r => {
-          Object.keys(r).forEach(k => {
-            if (k === "__id") return;
-            const v = String(r[k] ?? "");
-            out += `<${k}:${v.length}>${v}`;
-          });
-          out += "<EOR>\n";
-        });
-        return out;
-      }
-
-      function handleFile(e) {
-        const f = e.target.files?.[0];
-        if (!f) return;
-        const reader = new FileReader();
-        reader.onload = () => parseAdif(String(reader.result));
-        reader.readAsText(f);
-      }
-
-      function filtered() {
-        if (!query) return records;
-        const q = query.toLowerCase();
-        return records.filter(r =>
-          Object.values(r).some(v => String(v).toLowerCase().includes(q))
-        );
-      }
-
-      function exportAdif() {
-        const text = buildAdif(records);
-        const blob = new Blob([text], { type: "text/plain;charset=utf-8" });
-        const url = URL.createObjectURL(blob);
-        const a = document.createElement("a");
-        a.href = url;
-        a.download = "export.adi";
-        a.click();
-        URL.revokeObjectURL(url);
-      }
-
-      function startEdit(rec) { setSelected({ ...rec }); }
-      function saveEdit() {
-        setRecords(prev => prev.map(r => (r.__id === selected.__id ? selected : r)));
-        setSelected(null);
-      }
-
-      function addEmpty() {
-        const id = (records.reduce((m, r) => Math.max(m, r.__id || 0), 0) || 0) + 1;
-        const newRec = { __id: id, CALL: "", QSO_DATE: "", TIME_ON: "", BAND: "", MODE: "", RST_SENT: "", RST_RCVD: "" };
-        setRecords([newRec, ...records]);
-        setSelected(newRec);
-      }
-
-      function deleteRec(id) {
-        if (!confirm("确定删除？")) return;
-        setRecords(records.filter(r => r.__id !== id));
-      }
-
-      return (
-        <div className="p-4 max-w-6xl mx-auto">
-          <div className="flex items-center justify-between mb-4">
-            <h1 className="text-2xl font-bold">Web ADIF 日志查看 / 编辑器（静态版）</h1>
-
-            <div className="flex gap-2">
-              <input ref={fileRef} type="file" accept=".adi,.txt,application/octet-stream,text/plain" onChange={handleFile} className="hidden" />
-              <button className="px-3 py-2 bg-slate-800 text-white rounded" onClick={() => fileRef.current.click()}>导入 ADIF</button>
-              <button className="px-3 py-2 border rounded" onClick={addEmpty}>新增 QSO</button>
-              <button className="px-3 py-2 bg-green-600 text-white rounded" onClick={exportAdif}>导出 ADIF</button>
-            </div>
-          </div>
-
-          <div className="mb-4 flex gap-3">
-            <input className="flex-1 p-2 border rounded" placeholder="搜索所有字段" value={query} onChange={e => setQuery(e.target.value)} />
-            <div className="text-sm text-gray-600">记录: {records.length}</div>
-          </div>
-
-          <div className="overflow-x-auto border rounded">
-            <table className="min-w-full text-sm">
-              <thead className="bg-slate-100">
-                <tr>
-                  <th className="p-2">#</th>
-                  <th className="p-2">CALL</th>
-                  <th className="p-2">QSO_DATE</th>
-                  <th className="p-2">TIME_ON</th>
-                  <th className="p-2">BAND</th>
-                  <th className="p-2">MODE</th>
-                  <th className="p-2">RST_SENT</th>
-                  <th className="p-2">RST_RCVD</th>
-                  <th className="p-2">操作</th>
-                </tr>
-              </thead>
-              <tbody>
-                {filtered().map(r => (
-                  <tr key={r.__id} className="odd:bg-white even:bg-slate-50">
-                    <td className="p-2">{r.__id}</td>
-                    <td className="p-2">{r.CALL}</td>
-                    <td className="p-2">{r.QSO_DATE}</td>
-                    <td className="p-2">{r.TIME_ON}</td>
-                    <td className="p-2">{r.BAND}</td>
-                    <td className="p-2">{r.MODE}</td>
-                    <td className="p-2">{r.RST_SENT}</td>
-                    <td className="p-2">{r.RST_RCVD}</td>
-                    <td className="p-2 flex gap-2">
-                      <button className="px-2 py-1 border rounded" onClick={() => startEdit(r)}>编辑</button>
-                      <button className="px-2 py-1 border rounded text-red-600" onClick={() => deleteRec(r.__id)}>删除</button>
-                    </td>
-                  </tr>
-                ))}
-              </tbody>
-            </table>
-          </div>
-
-          {selected && (
-            <div className="fixed inset-0 bg-black/40 flex items-center justify-center p-4">
-              <div className="bg-white rounded-lg w-full max-w-2xl p-4">
-                <h2 className="text-lg font-semibold mb-2">编辑 QSO - {selected.__id}</h2>
-
-                <div className="grid grid-cols-2 gap-2 max-h-[60vh] overflow-y-auto">
-                  {Object.keys(selected).filter(f => f !== "__id").map(f => (
-                    <div key={f} className="flex flex-col">
-                      <label className="text-xs text-gray-600">{f}</label>
-                      <input className="p-2 border rounded" value={selected[f] ?? ""} onChange={e => setSelected(prev => ({ ...prev, [f]: e.target.value }))} />
-                    </div>
-                  ))}
-                </div>
-
-                <div className="mt-4 flex justify-end gap-2">
-                  <button className="px-3 py-2 border rounded" onClick={() => setSelected(null)}>取消</button>
-                  <button className="px-3 py-2 bg-blue-600 text-white rounded" onClick={saveEdit}>保存</button>
-                </div>
-              </div>
-            </div>
-          )}
-
-          <div className="mt-6 text-sm text-gray-600">识别字段: {fields.join(", ")}</div>
-        </div>
-      );
-    }
-
-    ReactDOM.createRoot(document.getElementById("root")).render(<AdifEditor />);
-  </script>
+<script src="app.js"></script>
 </body>
 </html>
