Modify ADIF file input accept types
Updated file input to accept application/octet-stream.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <!-- ADIF 导入 -->
 <div class="box">
     <h3>1. 导入 ADIF 文件</h3>
-    <input type="file" id="adifFile" accept=".adi,.adif,text/plain">
+    <input type="file" id="adifFile" accept=".adi,.adif,application/octet-stream,text/plain">
     <button id="exportAdif">导出 ADIF</button>
 </div>
 
